<?xml version="1.0"?>
<package format="2">
    <name>obstacle_distance</name>
    <version>1.0.0</version>
    <description>The obstacle_distance package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="koellsch86@googlemail.com">Florian Koehler</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>pkg-config</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>boost</depend>
    <depend>cmake_modules</depend>
    <depend>cob_srvs</depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    <depend>fcl</depend>
    <depend>geometry_msgs</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>

    <exec_depend>rospy</exec_depend>

</package>
