<?xml version="1.0"?>
<package format="2">
    <name>obstacle_distance</name>
    <version>1.0.0</version>
    <description>The obstacle_distance package</description>

    <maintainer email="koellsch86@googlemail.com">Florian Koehler</maintainer>
    <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>boost</depend>
    <depend>cmake_modules</depend>
    <depend>cob_srvs</depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    <depend>fcl</depend>
    <depend>geometric_shapes</depend>
    <depend>geometry_msgs</depend>
    <depend>moveit_core</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_perception</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>

    <exec_depend>rospy</exec_depend>

</package>
