<?xml version="1.0"?>
<package format="2">
  <name>cob_collision_monitor</name>
  <version>0.7.1</version>
  <description>The collision monitor uses the planning scene monitor to read the state of the robot and check it for collision with itselt or the environment. It addition a ground plane is added in any case. Can be used as a stand-aloan node or a move_group capability.</description>

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/cob_collision_monitor</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  
  <exec_depend>cob_moveit_config</exec_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/move_group_capabilities.xml"/>
  </export>
</package>
