<package>
  <name>cob_kinematics</name>
  <version>0.5.0</version>
  <description>
     IK solvers and utilities for Care-O-bot
  </description>
  <author email="mdl@ipa.fhg.de">Mathias Luedtke</author>
  <maintainer email="mdl@ipa.fhg.de">Mathias Luedtke</maintainer>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_manipulation/</url>
  <url type="bugtracker">https://github.com/ipa320/cob_manipulation/issues</url>
  <url type="repository">https://github.com/ipa320/cob_manipulation</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <!--build_depend>urdf_parser</build_depend-->
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <!--run_depend>urdf_parser</run_depend-->
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>


  <export>
      <moveit_core plugin="${prefix}/ikfast/plugins.xml" /> 
  </export>

</package>


