<package format="2">
  <name>cob_kinematics</name>
  <version>0.6.4</version>
  <description>
     IK solvers and utilities for Care-O-bot
  </description>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_manipulation/</url>
  <url type="bugtracker">https://github.com/ipa320/cob_manipulation/issues</url>
  <url type="repository">https://github.com/ipa320/cob_manipulation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>liblapack-dev</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>urdf</depend>

  <export>
      <!--moveit_core plugin="${prefix}/ikfast/plugins.xml" /-->
  </export>
</package>


