<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_lookat_action</name>
  <version>0.7.9</version>
  <description>
     cob_lookat_action
  </description>

  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_manipulation/</url>
  <url type="bugtracker">https://github.com/ipa320/cob_manipulation/issues</url>
  <url type="repository">https://github.com/ipa320/cob_manipulation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>angles</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>move_base_msgs</depend>
  <depend condition="$ROS_DISTRO == kinetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == melodic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package>
